// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountDetails renders without error 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "flexShrink": 1,
      "gap": 16,
      "justifyContent": "space-between",
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "row",
        "flexShrink": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "flexShrink": 1,
          "gap": 8,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "transparent",
            "borderBottomColor": "transparent",
            "borderBottomLeftRadius": 999999,
            "borderBottomRightRadius": 999999,
            "borderBottomWidth": 0,
            "borderLeftColor": "transparent",
            "borderLeftWidth": 0,
            "borderRightColor": "transparent",
            "borderRightWidth": 0,
            "borderStyle": "solid",
            "borderTopColor": "transparent",
            "borderTopLeftRadius": 999999,
            "borderTopRightRadius": 999999,
            "borderTopWidth": 0,
            "flexDirection": "column",
            "position": "relative",
          }
        }
        testID="account-icon"
      >
        <svg
          height={50}
          viewBox="0 0 50 50"
          width={50}
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            style={
              {
                "transformOrigin": "center center",
              }
            }
          >
            <circle
              cx={25}
              cy={25}
              fill="#00C3A01F"
              r={25}
            />
            <g
              transform="translate(8.333333333333332, 8.333333333333332) scale(0.6944444444444445)"
            >
              <path
                clipRule="evenodd"
                d="M20.9454 0.0175773C22.4936 -0.167833 23.763 1.13917 23.763 2.72944V21.3625C23.763 22.9527 22.4993 24.2419 20.9405 24.2419L2.67549 24.2419C1.11665 24.2419 -0.16452 22.9469 0.0172307 21.3675C1.30306 10.1936 9.99222 1.32931 20.9454 0.0175773Z"
                fill="#00C3A0"
                fillRule="evenodd"
              />
              <path
                clipRule="evenodd"
                d="M27.0546 47.9824C25.5064 48.1678 24.237 46.8608 24.237 45.2706V26.6375C24.237 25.0473 25.5007 23.7581 27.0595 23.7581L45.3245 23.7581C46.8833 23.7581 48.1645 25.0531 47.9828 26.6325C46.6969 37.8064 38.0078 46.6707 27.0546 47.9824Z"
                fill="#00C3A0"
                fillRule="evenodd"
              />
            </g>
          </g>
        </svg>
      </View>
      <View
        style={
          {
            "alignItems": "flex-start",
            "flexDirection": "column",
            "flexShrink": 1,
            "gap": 0,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 12,
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 4,
                "justifyContent": "center",
              }
            }
          >
            <Text
              adjustsFontSizeToFit={true}
              allowFontScaling={false}
              ellipsizeMode="tail"
              maxFontSizeMultiplier={1.4}
              numberOfLines={1}
              style={
                {
                  "color": "#222222",
                  "flexShrink": 1,
                  "fontFamily": "Basel-Book",
                  "fontSize": 14,
                  "lineHeight": 20,
                }
              }
              suppressHighlighting={true}
              testID="address-display/name/0x​82D5...3Fa6"
            >
              0x​82D5...3Fa6
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "flexShrink": 1,
        "gap": 4,
        "justifyContent": "flex-end",
      }
    }
  >
    <Text
      allowFontScaling={false}
      maxFontSizeMultiplier={1.4}
      style={
        {
          "color": "#7D7D7D",
          "fontFamily": "Basel-Book",
          "fontSize": 14,
          "lineHeight": 20,
        }
      }
      suppressHighlighting={true}
    >
      0x82D5...3Fa6
    </Text>
  </View>
</View>
`;

exports[`AccountDetails renders without error with chevron 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "flexShrink": 1,
      "gap": 16,
      "justifyContent": "space-between",
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "row",
        "flexShrink": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "flexShrink": 1,
          "gap": 8,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "transparent",
            "borderBottomColor": "transparent",
            "borderBottomLeftRadius": 999999,
            "borderBottomRightRadius": 999999,
            "borderBottomWidth": 0,
            "borderLeftColor": "transparent",
            "borderLeftWidth": 0,
            "borderRightColor": "transparent",
            "borderRightWidth": 0,
            "borderStyle": "solid",
            "borderTopColor": "transparent",
            "borderTopLeftRadius": 999999,
            "borderTopRightRadius": 999999,
            "borderTopWidth": 0,
            "flexDirection": "column",
            "position": "relative",
          }
        }
        testID="account-icon"
      >
        <svg
          height={50}
          viewBox="0 0 50 50"
          width={50}
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            style={
              {
                "transformOrigin": "center center",
              }
            }
          >
            <circle
              cx={25}
              cy={25}
              fill="#00C3A01F"
              r={25}
            />
            <g
              transform="translate(8.333333333333332, 8.333333333333332) scale(0.6944444444444445)"
            >
              <path
                clipRule="evenodd"
                d="M20.9454 0.0175773C22.4936 -0.167833 23.763 1.13917 23.763 2.72944V21.3625C23.763 22.9527 22.4993 24.2419 20.9405 24.2419L2.67549 24.2419C1.11665 24.2419 -0.16452 22.9469 0.0172307 21.3675C1.30306 10.1936 9.99222 1.32931 20.9454 0.0175773Z"
                fill="#00C3A0"
                fillRule="evenodd"
              />
              <path
                clipRule="evenodd"
                d="M27.0546 47.9824C25.5064 48.1678 24.237 46.8608 24.237 45.2706V26.6375C24.237 25.0473 25.5007 23.7581 27.0595 23.7581L45.3245 23.7581C46.8833 23.7581 48.1645 25.0531 47.9828 26.6325C46.6969 37.8064 38.0078 46.6707 27.0546 47.9824Z"
                fill="#00C3A0"
                fillRule="evenodd"
              />
            </g>
          </g>
        </svg>
      </View>
      <View
        style={
          {
            "alignItems": "flex-start",
            "flexDirection": "column",
            "flexShrink": 1,
            "gap": 0,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 12,
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 4,
                "justifyContent": "center",
              }
            }
          >
            <Text
              adjustsFontSizeToFit={true}
              allowFontScaling={false}
              ellipsizeMode="tail"
              maxFontSizeMultiplier={1.4}
              numberOfLines={1}
              style={
                {
                  "color": "#222222",
                  "flexShrink": 1,
                  "fontFamily": "Basel-Book",
                  "fontSize": 14,
                  "lineHeight": 20,
                }
              }
              suppressHighlighting={true}
              testID="address-display/name/0x​82D5...3Fa6"
            >
              0x​82D5...3Fa6
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "flexShrink": 1,
        "gap": 4,
        "justifyContent": "flex-end",
      }
    }
  >
    <Text
      allowFontScaling={false}
      maxFontSizeMultiplier={1.4}
      style={
        {
          "color": "#7D7D7D",
          "fontFamily": "Basel-Book",
          "fontSize": 14,
          "lineHeight": 20,
        }
      }
      suppressHighlighting={true}
    >
      0x82D5...3Fa6
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "borderBottomLeftRadius": 999999,
          "borderBottomRightRadius": 999999,
          "borderTopLeftRadius": 999999,
          "borderTopRightRadius": 999999,
          "flexDirection": "column",
          "justifyContent": "center",
          "transform": [
            {
              "rotate": "180deg",
            },
          ],
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="50"
        bbWidth="50"
        fill="none"
        focusable={false}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="currentColor"
        strokeWidth={8}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "color": "#7D7D7D",
              "height": 50,
              "width": 50,
            },
            {
              "flex": 0,
              "height": 50,
              "width": 50,
            },
          ]
        }
        tintColor="#7D7D7D"
        vbHeight={24}
        vbWidth={24}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
            ]
          }
          stroke={
            {
              "type": 2,
            }
          }
          strokeWidth="8"
        >
          <RNSVGPath
            d="M15 6L9 12L15 18"
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            propList={
              [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "type": 2,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth="3"
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;
